--- a/styles/overlay.css
+++ b/styles/overlay.css
@@ -16,6 +16,7 @@ aside {
     top: 0;
     width: 100%;
     height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
     display: none;
 }
